--- a/term.ipynb
+++ b/term.ipynb
@@ -14347,28 +14347,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 179,
    "id": "1dd13a81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "texasCC = txchildCare[['MCBto5', 'MC6to11', 'MC12to17', 'MC18to23', 'MC24to29', 'MC30to35',\n",
+    "texasCC = txchildCare[['Year', 'MCBto5', 'MC6to11', 'MC12to17', 'MC18to23', 'MC24to29', 'MC30to35',\n",
     "                     'MC36to41', 'MC42to47', 'MC48to53', 'MC54toSA', 'MCSA']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "id": "bc8eeb07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "texasCC['Ave_Cost'] = texasCC.mean(axis = 1).round(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 180,
    "id": "24a48975",
    "metadata": {},
    "outputs": [
@@ -14380,6 +14370,318 @@
          "name": "index",
          "rawType": "int64",
          "type": "integer"
+        },
+        {
+         "name": "Year",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
+        },
+        {
+         "name": "MCBto5",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MC6to11",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MC12to17",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MC18to23",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MC24to29",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MC30to35",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MC36to41",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MC42to47",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MC48to53",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MC54toSA",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MCSA",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "8ca12805-1664-4ebb-937f-6047ec6e8734",
+       "rows": [
+        [
+         "27752",
+         "2008-01-01 00:00:00",
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "27753",
+         "2009-01-01 00:00:00",
+         "94.5",
+         "94.5",
+         "94.5",
+         "88.03",
+         "88.03",
+         "88.03",
+         "83.57",
+         "83.57",
+         "83.57",
+         "83.57",
+         "80.75"
+        ],
+        [
+         "27754",
+         "2010-01-01 00:00:00",
+         "101.0",
+         "101.0",
+         "101.0",
+         "93.75",
+         "93.75",
+         "93.75",
+         "88.3",
+         "88.3",
+         "88.3",
+         "88.3",
+         "84.0"
+        ],
+        [
+         "27755",
+         "2011-01-01 00:00:00",
+         "107.5",
+         "107.5",
+         "107.5",
+         "99.48",
+         "99.48",
+         "99.48",
+         "93.03",
+         "93.03",
+         "93.03",
+         "93.03",
+         "87.25"
+        ],
+        [
+         "27756",
+         "2012-01-01 00:00:00",
+         "114.0",
+         "114.0",
+         "114.0",
+         "105.2",
+         "105.2",
+         "105.2",
+         "97.75",
+         "97.75",
+         "97.75",
+         "97.75",
+         "90.5"
+        ]
+       ],
+       "shape": {
+        "columns": 12,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>MCBto5</th>\n",
+       "      <th>MC6to11</th>\n",
+       "      <th>MC12to17</th>\n",
+       "      <th>MC18to23</th>\n",
+       "      <th>MC24to29</th>\n",
+       "      <th>MC30to35</th>\n",
+       "      <th>MC36to41</th>\n",
+       "      <th>MC42to47</th>\n",
+       "      <th>MC48to53</th>\n",
+       "      <th>MC54toSA</th>\n",
+       "      <th>MCSA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27752</th>\n",
+       "      <td>2008-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27753</th>\n",
+       "      <td>2009-01-01</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>88.03</td>\n",
+       "      <td>88.03</td>\n",
+       "      <td>88.03</td>\n",
+       "      <td>83.57</td>\n",
+       "      <td>83.57</td>\n",
+       "      <td>83.57</td>\n",
+       "      <td>83.57</td>\n",
+       "      <td>80.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27754</th>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>93.75</td>\n",
+       "      <td>93.75</td>\n",
+       "      <td>93.75</td>\n",
+       "      <td>88.30</td>\n",
+       "      <td>88.30</td>\n",
+       "      <td>88.30</td>\n",
+       "      <td>88.30</td>\n",
+       "      <td>84.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27755</th>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>107.5</td>\n",
+       "      <td>107.5</td>\n",
+       "      <td>107.5</td>\n",
+       "      <td>99.48</td>\n",
+       "      <td>99.48</td>\n",
+       "      <td>99.48</td>\n",
+       "      <td>93.03</td>\n",
+       "      <td>93.03</td>\n",
+       "      <td>93.03</td>\n",
+       "      <td>93.03</td>\n",
+       "      <td>87.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27756</th>\n",
+       "      <td>2012-01-01</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>105.20</td>\n",
+       "      <td>105.20</td>\n",
+       "      <td>105.20</td>\n",
+       "      <td>97.75</td>\n",
+       "      <td>97.75</td>\n",
+       "      <td>97.75</td>\n",
+       "      <td>97.75</td>\n",
+       "      <td>90.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Year  MCBto5  MC6to11  MC12to17  MC18to23  MC24to29  MC30to35  \\\n",
+       "27752 2008-01-01     NaN      NaN       NaN       NaN       NaN       NaN   \n",
+       "27753 2009-01-01    94.5     94.5      94.5     88.03     88.03     88.03   \n",
+       "27754 2010-01-01   101.0    101.0     101.0     93.75     93.75     93.75   \n",
+       "27755 2011-01-01   107.5    107.5     107.5     99.48     99.48     99.48   \n",
+       "27756 2012-01-01   114.0    114.0     114.0    105.20    105.20    105.20   \n",
+       "\n",
+       "       MC36to41  MC42to47  MC48to53  MC54toSA   MCSA  \n",
+       "27752       NaN       NaN       NaN       NaN    NaN  \n",
+       "27753     83.57     83.57     83.57     83.57  80.75  \n",
+       "27754     88.30     88.30     88.30     88.30  84.00  \n",
+       "27755     93.03     93.03     93.03     93.03  87.25  \n",
+       "27756     97.75     97.75     97.75     97.75  90.50  "
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texasCC.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "aebfcea7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texasCC['Ave_Cost'] = texasCC.loc[:, texasCC.columns != 'Year'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "7f71c989",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Year",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
         },
         {
          "name": "MCBto5",
@@ -14442,10 +14744,11 @@
          "type": "float"
         }
        ],
-       "ref": "0a0215af-a7c4-4593-9667-66494949ade6",
+       "ref": "0ce26c15-7529-4bdc-9cc5-c9e739446a15",
        "rows": [
         [
          "27752",
+         "2008-01-01 00:00:00",
          null,
          null,
          null,
@@ -14461,6 +14764,7 @@
         ],
         [
          "27753",
+         "2009-01-01 00:00:00",
          "94.5",
          "94.5",
          "94.5",
@@ -14472,10 +14776,11 @@
          "83.57",
          "83.57",
          "80.75",
-         "87.51"
+         null
         ],
         [
          "27754",
+         "2010-01-01 00:00:00",
          "101.0",
          "101.0",
          "101.0",
@@ -14487,10 +14792,11 @@
          "88.3",
          "88.3",
          "84.0",
-         "92.86"
+         null
         ],
         [
          "27755",
+         "2011-01-01 00:00:00",
          "107.5",
          "107.5",
          "107.5",
@@ -14502,10 +14808,11 @@
          "93.03",
          "93.03",
          "87.25",
-         "98.21"
+         null
         ],
         [
          "27756",
+         "2012-01-01 00:00:00",
          "114.0",
          "114.0",
          "114.0",
@@ -14517,11 +14824,11 @@
          "97.75",
          "97.75",
          "90.5",
-         "103.55"
+         null
         ]
        ],
        "shape": {
-        "columns": 12,
+        "columns": 13,
         "rows": 5
        }
       },
@@ -14544,6 +14851,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Year</th>\n",
        "      <th>MCBto5</th>\n",
        "      <th>MC6to11</th>\n",
        "      <th>MC12to17</th>\n",
@@ -14561,6 +14869,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>27752</th>\n",
+       "      <td>2008-01-01</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -14576,6 +14885,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27753</th>\n",
+       "      <td>2009-01-01</td>\n",
        "      <td>94.5</td>\n",
        "      <td>94.5</td>\n",
        "      <td>94.5</td>\n",
@@ -14587,10 +14897,11 @@
        "      <td>83.57</td>\n",
        "      <td>83.57</td>\n",
        "      <td>80.75</td>\n",
-       "      <td>87.51</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27754</th>\n",
+       "      <td>2010-01-01</td>\n",
        "      <td>101.0</td>\n",
        "      <td>101.0</td>\n",
        "      <td>101.0</td>\n",
@@ -14602,10 +14913,11 @@
        "      <td>88.30</td>\n",
        "      <td>88.30</td>\n",
        "      <td>84.00</td>\n",
-       "      <td>92.86</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27755</th>\n",
+       "      <td>2011-01-01</td>\n",
        "      <td>107.5</td>\n",
        "      <td>107.5</td>\n",
        "      <td>107.5</td>\n",
@@ -14617,10 +14929,11 @@
        "      <td>93.03</td>\n",
        "      <td>93.03</td>\n",
        "      <td>87.25</td>\n",
-       "      <td>98.21</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27756</th>\n",
+       "      <td>2012-01-01</td>\n",
        "      <td>114.0</td>\n",
        "      <td>114.0</td>\n",
        "      <td>114.0</td>\n",
@@ -14632,29 +14945,29 @@
        "      <td>97.75</td>\n",
        "      <td>97.75</td>\n",
        "      <td>90.50</td>\n",
-       "      <td>103.55</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       MCBto5  MC6to11  MC12to17  MC18to23  MC24to29  MC30to35  MC36to41  \\\n",
-       "27752     NaN      NaN       NaN       NaN       NaN       NaN       NaN   \n",
-       "27753    94.5     94.5      94.5     88.03     88.03     88.03     83.57   \n",
-       "27754   101.0    101.0     101.0     93.75     93.75     93.75     88.30   \n",
-       "27755   107.5    107.5     107.5     99.48     99.48     99.48     93.03   \n",
-       "27756   114.0    114.0     114.0    105.20    105.20    105.20     97.75   \n",
+       "            Year  MCBto5  MC6to11  MC12to17  MC18to23  MC24to29  MC30to35  \\\n",
+       "27752 2008-01-01     NaN      NaN       NaN       NaN       NaN       NaN   \n",
+       "27753 2009-01-01    94.5     94.5      94.5     88.03     88.03     88.03   \n",
+       "27754 2010-01-01   101.0    101.0     101.0     93.75     93.75     93.75   \n",
+       "27755 2011-01-01   107.5    107.5     107.5     99.48     99.48     99.48   \n",
+       "27756 2012-01-01   114.0    114.0     114.0    105.20    105.20    105.20   \n",
        "\n",
-       "       MC42to47  MC48to53  MC54toSA   MCSA  Ave_Cost  \n",
-       "27752       NaN       NaN       NaN    NaN       NaN  \n",
-       "27753     83.57     83.57     83.57  80.75     87.51  \n",
-       "27754     88.30     88.30     88.30  84.00     92.86  \n",
-       "27755     93.03     93.03     93.03  87.25     98.21  \n",
-       "27756     97.75     97.75     97.75  90.50    103.55  "
+       "       MC36to41  MC42to47  MC48to53  MC54toSA   MCSA  Ave_Cost  \n",
+       "27752       NaN       NaN       NaN       NaN    NaN       NaN  \n",
+       "27753     83.57     83.57     83.57     83.57  80.75       NaN  \n",
+       "27754     88.30     88.30     88.30     88.30  84.00       NaN  \n",
+       "27755     93.03     93.03     93.03     93.03  87.25       NaN  \n",
+       "27756     97.75     97.75     97.75     97.75  90.50       NaN  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14766,14 +15079,6 @@
     ").interactive()\n",
     "chart_b"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef1bac9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
